force-app/main/default/objects/SR_Task_Definition__c/SR_Task_Definition__c.object-meta.xml
<CustomObject>
    <label>SR Task Definition</label>
    <nameField>
        <displayFormat>TD-{000000}</displayFormat>
        <label>Definition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>