force-app/main/default/objects/SR_Task_Definition__c/fields/Alert_Content__c.field-meta.xml
<CustomField>
    <fullName>Alert_Content__c</fullName>
    <label>Alert Content</label>
    <length>200</length>
    <type>Text</type>
</CustomField>