force-app/main/default/objects/SR_Task_Definition__c/fields/Alert_Function__c.field-meta.xml
<CustomField>
    <fullName>Alert_Function__c</fullName>
    <label>Alert Function</label>
    <length>80</length>
    <type>Text</type>
</CustomField>