force-app/main/default/objects/SR_Task_Definition__c/fields/Alert_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Alert_Recipient__c</fullName>
    <label>Alert Recipient</label>
    <length>80</length>
    <type>Text</type>
</CustomField>