force-app/main/default/objects/SR_Task_Definition__c/fields/Alert_Time__c.field-meta.xml
<CustomField>
    <fullName>Alert_Time__c</fullName>
    <description>Alert Time in second, converted from XXdYYhZZm</description>
    <label>Alert Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>