force-app/main/default/objects/SR_Task_Definition__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>