force-app/main/default/objects/SR_Task_Definition__c/fields/Follow_Sub_Case_Ind__c.field-meta.xml
<CustomField>
    <fullName>Follow_Sub_Case_Ind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Target Time follow Sub Case Indicator(Y/N)</description>
    <label>Follow Sub Case Ind</label>
    <type>Checkbox</type>
</CustomField>