force-app/main/default/objects/SR_Task_Definition__c/fields/Task_Restoration_Period__c.field-meta.xml
<CustomField>
    <fullName>Task_Restoration_Period__c</fullName>
    <description>Target Time period in second, converted from XXdYYhZZm</description>
    <label>Task Restoration Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>